Fix sort buttons contrast minimums

--- a/src/Components/Buttons.scss
+++ b/src/Components/Buttons.scss
@@ -1,3 +1,3 @@
 .btn-main {
-    background-color: #1AAB8A;
+    background-color: #077D7F;
 }
