--- a/src/cardsDisplay.scss
+++ b/src/cardsDisplay.scss
@@ -13,7 +13,7 @@ $break-3: ($card-min-width * 4 + $card-gap * 5);
 }
 
 .btn-main {
-  background-color: #1AAB8A !important;
+  background-color: #077D7F !important;
   margin: 0.5rem;
   color: white !important
 }
